# Laplace-Smoothing-Visualized-

./: CMakeLists.txt  README.md
src/: camera.h  edge_shader.fs  edge_shader.vs  main.cpp  mesh.h  shader.fs  shader.vs  util.h
src/libs/: glad.c  shader.cpp  shader.h
src/libs/glad/: glad.h
